--- a/css/style.css
+++ b/css/style.css
@@ -39,34 +39,40 @@ h1 {
 
 nav {
     background-color: rgb(191, 183, 183);
+    border-style: solid;
     grid-area: nav;
 }
 
 article {
     display: flex;
     align-items: center;
-    margin: 5px;
+    margin-top: 15px;
+    margin-bottom: 0px;
+    margin-left: 15px;
+    border-style: solid;
+    background-color: rgb(191, 183, 183);
+    border-radius: 15px;
 }
 
 #ar1 {
-    background-color: red;
     grid-area: ar1;
 }
 
 #ar2 {
-    background-color: green;
     grid-area: ar2;
 }
 
 #ar3 {
-    background-color: blue;
     grid-area: ar3;
 }
 
 aside {
-    background-color: chartreuse;
+    border-style: solid;
+    border-radius: 15px;
+    background-color: rgb(191, 183, 183);
     grid-area: aside;
-    margin: 5px;
+    margin: 15px;
+    margin-bottom: 0px;
 }
 
 ul {
@@ -79,9 +85,26 @@ ul {
 
 img {
     margin: 15px;
+    margin-right: 0px;
     display: flex;
     justify-content: left;
-    max-width: 100%;
+    height: 75%;
+    width: auto;
+    border-radius: 15px;
+    border-style: solid;
+}
+
+img:hover {
+    background-color: rgb(161, 151, 151);
+    border-radius: 30px;
+    filter: brightness(60%);
+}
+
+#ad {
+    margin: 15px;
+    display: flex;
+    justify-content: left;
+    height: auto;
     width: auto;
 }
 
@@ -90,4 +113,19 @@ a {
     font-family: fantasy;
     text-decoration: none;
     color: rgb(13, 12, 12);
+}
+
+a:hover {
+    background-color: rgb(161, 151, 151);
+    border-radius: 10px;
+}
+
+p {
+    margin: 30px;
+}
+
+p:hover {
+    background-color: rgb(161, 151, 151);
+    border-radius: 10px;
+    padding: 5px;
 }
