--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,11 @@ img:hover {
 }
 
 #ad {
-    margin: 15px;
+    margin: 0px;
     display: flex;
-    justify-content: left;
-    height: auto;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
     width: auto;
 }
 
@@ -128,4 +129,9 @@ p:hover {
     background-color: rgb(161, 151, 151);
     border-radius: 10px;
     padding: 5px;
+}
+
+#r {
+    height: 100vh;
+    width: auto;
 }
