--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 #wrapper_aboutus {
     display: grid;
     grid-template-columns: minmax(150px, 1fr) minmax(150px, 1fr);
-    grid-template-rows: minmax(100px, 0.25fr) 75px minmax(150px, 1fr) minmax(150px, 1fr) minmax(150px, 100vh);
+    grid-template-rows: minmax(100px, 0.25fr) 75px minmax(150px, 1.25fr) minmax(150px, 3fr) minmax(150px, 55vh);
     grid-template-areas:
     "header header"
     "nav nav"
@@ -71,15 +71,15 @@ body {
     border-style: solid;
     border-width: 3.5px;
     border-radius: 30px;
-    height: 0.9fr;
-    width: 325px;
+    height: 90%;
+    width: 27.5%;
     margin: 5vh;
 
 }
 
 .info-card img {
-    height: 40vh;
-    width: 40vh;
+    height: 40%;
+    width: 70%;
     margin: 25px;
 }
 
@@ -97,7 +97,7 @@ h1 {
     font-weight:bolder;
 }
 
-#art_sec h2 {
+.art_sec h2 {
     font-size: 50px;
     margin: 30px;
     margin-bottom: 0px;
@@ -120,7 +120,7 @@ article {
     border-radius: 15px;
 }
 
-#art_sec {
+.art_sec {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -145,19 +145,76 @@ article {
 }
 
 #abouttext {
+    margin: 30px;
     grid-area: abt;
-    background-color: pink;
+    background-color: rgb(191, 183, 183);
+    text-align: center;
+    border-width: 3.5px;
+    border-radius: 30px;
+    border: solid black;
+}
+
+#abouttext p {
+    padding: 30px;
+    padding-top: 0px;
 }
 
 #aboutustitle {
+    margin: 30px;
     grid-area: abttitle;
-    background-color: red;
+    background-color: rgb(191, 183, 183);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-width: 3.5px;
+    border-radius: 30px;
+    border: solid black;
+}
+
+#aboutustitle p {
+    text-align: center;
+    margin: 5px;
+    margin-right: 225px;
+    margin-left: 225px;
+    
 }
 
 #peoplebox {
+    border-width: 3.5px;
+    border-radius: 30px;
+    border: solid black;
+    margin: 30px;
+    margin-top: 75px;
     grid-area: pplbox;
-    background-color: yellow;
+    background-color: rgb(191, 183, 183);
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+    "pplboxt" 
+    "founders"
+    ;
 }
+
+#peoplebox h2 {
+    text-align: center;
+    grid-area: pplboxt;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 80px;
+    font-size: 50px;
+}
+
+
+#founders {
+    grid-area: founders;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 100px;
+}
+ 
 
 aside {
     border-style: solid;
@@ -233,7 +290,7 @@ a:hover {
     border-radius: 10px;
 }
 
-#art_sec p {
+.art_sec p {
     margin: 30px;
     margin-top: 15px;
     font-size: 20px;
